--- a/config.yml
+++ b/config.yml
@@ -84,11 +84,7 @@ params:
 
   analytics:
     google:
-      SiteVerificationTag: "XYZabc"
-    bing:
-      SiteVerificationTag: "XYZabc"
-    yandex:
-      SiteVerificationTag: "XYZabc"
+      SiteVerificationTag: "G-7WQQ0RYBMV"
 
   cover:
     hidden: true # hide everywhere but not in structured data
