--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,8 @@ server {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ =404;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
