--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,7 @@
 paginate: 5
 theme: PaperMod
+baseURL: "https://davvi.io/" # if your site is in 'https', then make sure your base url isn't written using 'http' otherwise your sitemap would contain http (as opposeed to https) URLs. This would affect Google indexing of your URLs.
+
 
 enableRobotsTXT: true
 buildDrafts: false
